fixed fonts and overflow and test hero

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,6 @@
   --color-bg: #030303;
   --color-sec: #e6e6e6;
   --color-text: #ffffff;
-
-  --font-main: var(--font-main);
   --font-sec: var(--font-sec);
 }
 * {
